# id-game

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/components/: gamecell.rs  id.rs  mod.rs  room.rs
src/input/: mod.rs
src/state/: mod.rs
src/states/: mod.rs
src/types/: clock.rs
